@@ -60,6 +60,8 @@ Revision history for FusionInventory::Agent
          https://bugs.launchpad.net/ocsinventory-contact/+bug/720626
        * Linux: dhcp-leases file now always detected, mostly on Redhat hosts (Bernhard Denner)
          https://bugs.launchpad.net/ocsinventory-unix-agent/+bug/720628
+       * Win32: retrieve Antivirus information from //./root/SecurityCenter2 on Win7
+         http://forge.fusioninventory.org/issues/583
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
